--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 
                 <!-- screen -->
                 <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
-                    1024×320
+                    <div class="flex justify-center">
+                        <p class="bg-[#2f2941] px-6 pb-4 rounded-b-xl text-white">Don't watch Keyboard while playing...</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div>
                 </div>
                 <!-- key-board -->
                 <div>
